<resources>
    <string name="app_name">Mr. Window</string>

    <string name="status">Current Status</string>
    <string name="window_status">Windows:</string>
    <string name="blinds_status">Blinds:</string>
    <string name="window_status2">Open -</string>
    <string name="blinds_status2">Open -</string>
    <string name="window_status3">Windows are currently set to </string>
    <string name="blinds_status3">Blinds are currently set to AUTO</string>
    <string name="main_button1">Window Settings</string>
    <string name="main_button2">Blinds Settings</string>

    <string name="title_activity_second">Window Settings</string>
    <string name="second_page">Mode: </string>
    <string name="button1">Open Window</string>
    <string name="button2">Close Window</string>
    <string name="inside">Inside</string>
    <string name="outside">Outside</string>
    <string name="insideTemp">Weather</string>
    <string name="outsideTemp">Weather</string>
    <string name="auto_separator">Auto Settings</string>
    <string name="auto_select">Auto Temperature: </string>
    <string name="auto_select2">F</string>
    <string name="manual_separator">Manual Settings</string>

    <string name="action_settings">Settings</string>
    <string name="sync_settings">Sync Now</string>

    <string name="title_activity_settings">Settings</string>
    <string name="button3">Set</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="percentage">% Open</string>
    <string name="button4">Clear</string>

    <string name="title_activity_third">Blinds Settings</string>
    <string name="blindStatus">This is the Blinds Schedule Page!</string>
    <string name="switchText">Auto</string>
    <string name="onoff">OFF/ON</string>
    <string name="manualBar1">CLOSED</string>
    <string name="manualBar2">OPEN</string>

</resources>
