<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tyler.helloworld.ThirdActivity"
    tools:showIn="@layout/activity_third">

<!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_page"
        android:id="@+id/text2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp" />-->

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/abc_action_bar_default_height_material">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:columnCount="2"
            android:rowCount="25">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="70dp"
                    android:layout_height="10dp" />

                <ImageView
                    android:id="@+id/blindPic"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:src="@drawable/blinds_closed"
                    android:background="#00000000" />

                <TextView
                    android:text="@string/blindStatus"
                    android:id="@+id/blindStatus"
                    android:layout_width="0dp"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="left|center_vertical"
                    android:textAlignment="center" />

                <Space
                    android:layout_width="70dp"
                    android:layout_height="10dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="30dp"
                    android:layout_height="20dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight=".7"/>

                <Switch
                    android:id="@+id/switch1"
                    android:text="@string/switchText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/onoff"
                    android:text= "@string/onoff"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight=".75"
                    android:layout_height="wrap_content"
                    android:gravity="center|fill"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="30dp"
                    android:layout_height="20dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@android:color/darker_gray"
                    android:paddingEnd="50dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/manual_controls"
                    android:text= "@string/manual_separator"
                    android:textSize="25sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/manualBar1"
                    android:text= "@string/manualBar1"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"/>

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/manualBar2"
                    android:text= "@string/manualBar2"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="left"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_weight="2.5"/>

                <ImageView
                    android:id="@+id/mrWindowdialog"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:src="@drawable/mrwindowdialog_blinds"
                    android:background="#00000000"/>

                <ImageView
                    android:id="@+id/mrWindowPic"
                    android:layout_width="0dp"
                    android:layout_height="110dp"
                    android:layout_weight="1"
                    android:src="@drawable/mrwindow_final"
                    android:background="#00000000"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_weight="2.5"/>

            </LinearLayout>

        </GridLayout>

    </ScrollView>

</RelativeLayout>
